--- a/.github/workflows/memesniperx.yml
+++ b/.github/workflows/memesniperx.yml
@@ -1,32 +1,22 @@
-name: MemeSniperX Bot
-
-on:
-  workflow_dispatch:
-  schedule:
-    - cron: "0 * * * *"  # Runs every hour (adjust as needed)
-
 jobs:
   run-bot:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout Repo
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.11"
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install Dependencies
+        run: |
+          pip install requests
 
-    - name: Run MemeSniperX bot
-      env:
-        TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-        CHAT_ID: ${{ secrets.CHAT_ID }}
-        MORALIS_API_KEY: ${{ secrets.MORALIS_API_KEY }}
-      run: |
-        python bot.py
+      - name: Run MemeSniperX Bot (Auto-Restart)
+        run: |
+          until python bot.py; do
+            echo "Bot crashed, retrying in 10s..."
+            sleep 10
+          done
