--- a/.github/workflows/memesniperx.yml
+++ b/.github/workflows/memesniperx.yml
@@ -1,8 +1,8 @@
 name: MemeSniperX Bot
 
 on:
-  workflow_dispatch:  # Allows manual runs
-  push:               # Runs whenever you push to main
+  workflow_dispatch:
+  push:
     branches:
       - main
 
@@ -10,19 +10,14 @@ jobs:
   run-bot:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
-
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-
       - name: Install Dependencies
         run: |
           pip install requests websockets
-
-      - name: Run MemeSniperX Bot (Auto-Restart)
+      - name: Run Bot (auto-restart)
         run: |
           until python bot.py; do
             echo "Bot crashed, retrying in 10s..."
